--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Adding config.py file
+config.py
+# Adding additional files
+API_practice.ipynb
+random.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
